<resources>
    <string name="app_name">ChatApp</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">UserName</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_create_an_account">Or Create An Account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="chats">Chats</string>
    <string name="add">add</string>
    <string name="addroom">Add Room</string>
    <string name="room_name">Room Name</string>
    <string name="room_description">Room Description</string>
    <string name="create_room">Create Room</string>
    <string name="todo">TODO</string>
    <string name="send">Send</string>
    <string name="your_message">Your message</string>
    <string name="developed_by_ahmedmaher">Developed by ( AhmedMaher ) 💙</string>
    <string name="warning_you_are_not_verified_your_e_mail">Warning! You Are Not Verified Your E-mail</string>
</resources>