<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.chatapp.ui.addRoom.AddRoomViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.register.RegisterActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/transparent"
            android:theme="@style/Theme.ChatApp.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/transparent"
                app:popupTheme="@style/Theme.ChatApp.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/addroom"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:context=".ui.addRoom.AddRoomActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewRoom"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".9">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="25dp"
                    android:weightSum="6">

                    <ImageView
                        android:id="@+id/groupRoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/todo"
                        android:padding="25dp"
                        android:src="@drawable/group" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:boxBackgroundColor="@color/transparent"
                        app:error="@{vm.roomNameError}">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/room_name"
                            android:inputType="text"
                            android:maxLines="2"
                            android:text="@={vm.roomName}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <Spinner
                            android:id="@+id/spinner"
                            style="@android:style/Widget.Holo.Light.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:boxBackgroundColor="@color/transparent"
                        app:error="@{vm.roomDescriptionError}">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/room_description"
                            android:inputType="text"
                            android:lines="4"
                            android:maxLines="4"
                            android:text="@={vm.roomDescription}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:onClick="@{()->vm.createRoom()}"
                        android:paddingHorizontal="70dp"
                        android:paddingVertical="15dp"
                        android:text="@string/create_room"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>